########################
# Current Developments #
########################

Work toward next release.  Currently under development.

ADDED:

CHANGED:

DEPRECATED:

REMOVED:

FIXED:

SECURITY:

DOCUMENTATION:


##################
# Version 11.0.5 #
##################

ADDED:

* Added the get_upload utility for downloading uploaded files.

* Added "extra_data" field to checker results.

* Added tutor.read_checker_result for quickly reading checker results.

* Added csq_npoints as an option to the "pythoncode" question type.  If
  specified, it overrides any point values assigned to the individual test
  cases.

CHANGED:

* Changed the default checker used for multiple-choice-multiple-answer problems.

* The "fileupload" question type now uses get_upload to download user files,
  rather than a data URI.

* Made changes to make sure that files are always closed after being opened.

FIXED:

* Fixed a potential race condition in the "pythoncode" question type.

* Fixed an issue with the "expression" question type, where overzealous type
  checking led to some correct answers being marked as incorrect.

* Fixed issues with the circuit simulator question type that prevented an AC
  analysis from being run interactively, and that caused incorrect AC results
  to be sent to the checker.

* Changes to make sure that reasonable fonts are used (particularly in <pre>,
  <code>, and <tt>) even if our fonts are not loaded.

* Some small temporary fixes to AC analysis in the circuit simulator for the
  "circuit" question type.

SECURITY:

* Fixed an issue whereby get_upload could be used to read arbitrary files from
  disk via a carefully constructed request.


##################
# Version 11.0.4 #
##################

FIXED:

* Fixed issue with matrix comparison in expression question type.

* Fixed typo (SyntaxError) in handout handler.


##################
# Version 11.0.3 #
##################

FIXED:

* Use https://github.com/aaugustin/websockets for websocket connections.
